# scifact-claim-verification

./: .gitignore  CONTEXT.md  FINDINGS.md  README.md  pyproject.toml
configs/: default.yaml
docs/: dense_models.md  next_steps.tex
models/joint-scifact/: training_log.json
models/verdict-scifact/: training_log.json
results/: 01_bm25_baseline.json  02_dense_retrieval.json  03_disagreement_analysis.json  04_evidence_verdict.json  05_abstention.json  06_claim_decomposition.json  08_generation.json  09_leaderboard_metrics.json  10_error_analysis.json  11_abstention_joint.json  14_learned_gate.json  15_fever_evaluation.json  16_fever_kl.json  17_adaptive_retrieval.json  fever_gate_features.npz  gate_features.npz  kl_lambda_ablation.md  predictions_dev.jsonl
results/kl_ablation_logs/: lambda0.0.json  lambda0.1.json  lambda0.1_seed43.json  lambda0.3.json  (+3 more)
scripts/: 01_baseline_retrieval.py  02_dense_retrieval.py  03_disagreement_analysis.py  03_evidence_verdict.py  04_evidence_verdict.py  05_abstention.py  06_claim_decomposition.py  07_finetune_joint.py  07_finetune_verdict.py  08_generation.py  09_leaderboard_predictions.py  10_error_analysis.py  11_abstention_joint.py  12_finetune_kl_disagreement.py  13_finetune_kl_threeway.py  14_learned_gate.py  15_fever_evaluation.py  16_fever_kl_finetune.py  17_adaptive_retrieval.py  18_adaptive_retrieval_fever.py  run_lambda_ablation.sh
tests/: test_adaptive_retrieval.py  test_calibration.py  test_decompose.py  test_disagreement.py  test_fever.py  test_generation.py  test_leaderboard.py  test_reasoning.py  test_retrieval.py
(+30 files in other folders)
